unpackaged/main/default/objects/Financial_Account_Related_Product__c/Financial_Account_Related_Product__c.object-meta.xml
<CustomObject>
    <label>Related Product</label>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Related Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>