unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Asset_Category__c.field-meta.xml
<CustomField>
    <fullName>Asset_Category__c</fullName>
    <formula>TEXT(Product__r.Asset_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Category</label>
    <type>Text</type>
</CustomField>