unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Financial_Account_Related_Products</relationshipName>
    <type>Lookup</type>
</CustomField>