unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Commission_Amount_AML__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount_AML__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commission Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>