unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Cusip__c.field-meta.xml
<CustomField>
    <fullName>Cusip__c</fullName>
    <label>Cusip</label>
    <length>9</length>
    <type>Text</type>
</CustomField>