unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipName>Financial_Account_Product</relationshipName>
    <type>Lookup</type>
</CustomField>