unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Financial_Advisor_Team__c.field-meta.xml
<CustomField>
    <fullName>Financial_Advisor_Team__c</fullName>
    <formula>Financial_Account__r.Financial_Advisor_Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Advisor Team</label>
    <type>Text</type>
</CustomField>