unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Flow_Interview_Id__c.field-meta.xml
<CustomField>
    <fullName>Flow_Interview_Id__c</fullName>
    <label>Flow Interview Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>