unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <formula>Financial_Account__r.FinServ__Household__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household</label>
    <type>Text</type>
</CustomField>