unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Investment_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Type__c</fullName>
    <formula>IF(TEXT(Wizard_Financial_Account__r.BD_or_RIA__c) = &#39;RIA&#39;, &#39;Advisory&#39;,
IF(Wizard_Financial_Account__r.Brokerage__c = TRUE, &#39;Brokerage&#39;, &#39;Direct&#39;))</formula>
    <label>Investment Type</label>
    <type>Text</type>
</CustomField>