unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Maestro_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Product_Code__c</fullName>
    <formula>Product__r.Product_Maestro_ID__c</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>