unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Maestro_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Rep_ID__c</fullName>
    <formula>Case__r.Financial_Advisor_Team__r.Rep_Number__c</formula>
    <label>Rep ID</label>
    <type>Text</type>
</CustomField>