unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Maestro_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Maestro_System_Id__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Id</label>
    <type>Text</type>
</CustomField>