unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Maestro_Trade_Date__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Trade_Date__c</fullName>
    <formula>LPAD(TEXT(MONTH(DATEVALUE(Case__r.CreatedDate))), 2, &#39;0&#39;)
&amp; &#39;/&#39; &amp;
LPAD(TEXT(DAY(DATEVALUE(Case__r.CreatedDate))), 2, &#39;0&#39;)
&amp; &#39;/&#39; &amp;
TEXT(YEAR(DATEVALUE(Case__r.CreatedDate)))</formula>
    <label>Trade Date</label>
    <type>Text</type>
</CustomField>