unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Maestro_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Transaction_Type__c</fullName>
    <formula>IF(
OR(
INCLUDES(Case__r.Source_of_Funds__c, &quot;Sale of an Annuity (Including 1035)&quot;),
INCLUDES(Case__r.Source_of_Funds__c, &quot;Sale of an Insurance Product (Including 1035)&quot;)),
&quot;1035&quot;,
IF(
INCLUDES(Case__r.Source_of_Funds__c, &quot;Sale of Property (Including 1031)&quot;),
&quot;1031&quot;,
&quot;Buy&quot;))</formula>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>