unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Onbase_Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Onbase_Migration_Id__c</fullName>
    <externalId>true</externalId>
    <label>Onbase Migration Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>