unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Order_Type_AML__c.field-meta.xml
<CustomField>
    <fullName>Order_Type_AML__c</fullName>
    <label>Order Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>