unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner__c</fullName>
    <formula>Financial_Account__r.Primary_Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Owner</label>
    <type>Text</type>
</CustomField>