unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Principal_Amount__c</fullName>
    <formula>TEXT(Amount__c)</formula>
    <label>Principal Amount</label>
    <type>Text</type>
</CustomField>