unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Share_Class__c.field-meta.xml
<CustomField>
    <fullName>Share_Class__c</fullName>
    <label>Share Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>