unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Share_Quantity_AML__c.field-meta.xml
<CustomField>
    <fullName>Share_Quantity_AML__c</fullName>
    <label>Share Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>