unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <description>Sponsor Name from Product</description>
    <formula>Product__r.Sponsor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor</label>
    <type>Text</type>
</CustomField>