unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol__c</fullName>
    <label>Ticker Symbol</label>
    <length>7</length>
    <type>Text</type>
</CustomField>