unpackaged/main/default/objects/Financial_Account_Related_Product__c/fields/Wizard_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Related Products</relationshipLabel>
    <relationshipName>Related_Products</relationshipName>
    <type>Lookup</type>
</CustomField>