unpackaged/main/default/objects/Financial_Account_Related_Product__c/listViews/Advisor_Related_Product_List.listView-meta.xml
<ListView>
    <fullName>Advisor_Related_Product_List</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Financial_Account__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>Household__c</columns>
    <columns>Financial_Advisor_Team__c</columns>
    <columns>Amount__c</columns>
    <columns>Principal_Amount__c</columns>
    <columns>Product__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Financial_Advisor_Team__c</field>
        <operation>contains</operation>
        <value>jason</value>
    </filters>
    <label>Advisor Related Product List</label>
</ListView>