unpackaged/main/default/objects/Financial_Account_Related_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Financial_Account__c</columns>
    <columns>Primary_Owner__c</columns>
    <columns>Household__c</columns>
    <columns>Financial_Advisor_Team__c</columns>
    <columns>Amount__c</columns>
    <columns>Principal_Amount__c</columns>
    <columns>Product__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>